syntax = "proto3";

service TaskService {
    rpc GetAll (Empty) returns (TaskList) {}
    rpc GetById (TaskRequestId) returns (Task) {}
    rpc Insert (Task) returns (Task) {}
    rpc Update (Task) returns (Task) {}
    rpc Remove (TaskRequestId) returns (Empty) {}
    rpc Done (TaskRequestId) returns (Task) {}
}

message Empty {}

message Task {
    string id = 1;
    string title = 2;
    string description = 3;
    bool done = 4;
}

message TaskList {
    repeated Task tasks = 1;
}

message TaskRequestId {
    string id = 1;
}